@@ -10,6 +10,9 @@ function mtw.load_targets(area)
    mtw.area_found = true
    mtw.bashing.target_type = "long"
    mtw.possible_targets = mtw.areas[area].targets
+   for i,v in ipairs(mtw.areas.generic.targets) do
+    table.append(mtw.possible_targets, v)
+   end
    echo("\n Level Range: "..mtw.areas[area].level)
    cecho("\n<green>Possible Targets:")
    for h in ipairs(mtw.possible_targets) do
@@ -17,6 +20,13 @@ function mtw.load_targets(area)
    end
    if mtw.areas[area].items then
     mtw.possible_items = mtw.areas[area].items
+   else
+    mtw.possible_items = {}
+   end 
+   for i,v in ipairs(mtw.areas.generic.items) do
+    table.append(mtw.possible_items, v)
+   end
+   if #mtw.possible_items > 0 then
     cecho("\n<green>Gathering Items:")
     for k in ipairs(mtw.possible_items) do
      echo("\n "..mtw.possible_items[k])
